--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Name of your site (displayed in the header)
-name: Tangent Writes Mirror
+name: Tangent Writes
 
 # Short bio or description (displayed in the header)
 description: Miscellaneous Idea Storage
