--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,8 @@ collections:
 # The release of Jekyll Now that you're using
 version: v1.2.0
 
+timezone: America/Denver
+
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
